k8s/webapp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2
  labels:
    app: webapp2
spec:
  selector:
    matchLabels:
      app: webapp2
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      name: webapp2
      labels:
        app: webapp2
    spec:
      containers:
      - name: webapp
        image: vicsmr/kubetest
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2
  labels:
    app: webapp2
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: webapp2
  selector:
    app: webapp2
  type: LoadBalancer
