k8s/webapp-vs-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp
spec:
  hosts:
  - "*"
  gateways:
  - webapp
  http:
  - match:
    - uri: 
       prefix: /
    route:
    - destination:
        port:  
          number: 8080 
        host: webapp
    retries:
      attempts: 3
      perTryTimeout: 2s
